# TempoEngine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TempoEngine.sln  copy_dlls.bat  rust-toolchain  vcpkg.json  vs-chromium-project.txt
BlenderAddons/tempest_gltf_extension/: __init__.py
DataSchemas/: AudioDatabase.fbs  CommonTypes.fbs  GeometryDatabase.fbs  Level.fbs  ShaderLibrary.fbs  TextureDatabase.fbs
FluidSimulator/: FluidSimulator.vcxproj  Main.cpp
Maelstrom/: GLTFScene.h  Main.cpp
Maelstrom/Levels/: CastleFightLevel.h
Maelstrom/Resources/: AudioDatabase.h  EntitiesDatabase.h  GeometryDatabase.h  Level.h  MaterialDatabase.h  Mesh.h  Resource.h  ScriptedLevel.h  Texture.h  TextureDatabase.h
Spark/: Main.cpp  Spark.vcxproj  packages.config
Supplements/VS Property Pages/: GeneralProperties.props  ThirdPartyLibs.props
Tempest/: CommonIncludes.h  CommonIncludesPch.cpp  Defines.h  Engine.cpp  Engine.h  EngineCore.cpp  EngineCore.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Logging.cpp  Logging.h  Memory.h  Tempest.vcxproj  Tempest.vcxproj.filters
Tempest/Audio/: AudioManager.cpp  AudioManager.h
Tempest/DataDefinitions/: AudioDatabase_generated.h  CommonTypes_generated.h  GeometryDatabase_generated.h  Level_generated.h  ShaderLibrary_generated.h  TextureDatabase_generated.h
Tempest/Graphics/: BackendTypes.h  FrameData.h  RenderFeature.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RendererCommandList.h  RendererTypes.h
Tempest/Graphics/Dx12/: Dx12Backend.cpp  Dx12Backend.h  Dx12Common.h  Dx12Device.cpp  Dx12Device.h  MainDescriptorHeapManager.cpp  MainDescriptorHeapManager.h
Tempest/Graphics/Dx12/Managers/: BufferManager.cpp  BufferManager.h  ConstantBufferDataManager.cpp  ConstantBufferDataManager.h  MainDescriptorHeapManager.cpp  MainDescriptorHeapManager.h  PipelineManager.cpp  PipelineManager.h  TextureManager.cpp  TextureManager.h  TwoPartRingBufferDescriptorHeapManager.cpp  TwoPartRingBufferDescriptorHeapManager.h
Tempest/Graphics/Features/: LightsFeature.cpp  LightsFeature.h  RectFeature.cpp  RectFeature.h  StaticMeshFeature.cpp  StaticMeshFeature.h
Tempest/Graphics/Managers/: MeshManager.cpp  MeshManager.h  PipelineCache.cpp  PipelineCache.h  PipelineStateManager.cpp  PipelineStateManager.h
Tempest/Job/: JobSystem.cpp  JobSystem.h  Queue.h
Tempest/Math/: Math.h
Tempest/Physics/: PhysicsManager.cpp  PhysicsManager.h
Tempest/Platform/: WindowsPlatform.cpp  WindowsPlatform.h
Tempest/Resources/: ResourceLoader.cpp  ResourceLoader.h
Tempest/Shaders/: BRDF.hlsl  Common.hlsl  Mesh.hlsl  Rects.hlsl  StaticMesh.hlsl  UI.hlsl
Tempest/Shaders/FluidSimulator/: VisualizeDensity.hlsl
Tempest/Utils/: Graph.h
Tempest/World/: Camera.cpp  Camera.h  EntityQuery.cpp  EntityQuery.h  EntityQueryImpl.h  GameplayFeature.h  System.h  World.cpp  World.h
Tempest/World/Components/: Components.h
Tempest/World/GameplayFeatures/: InputControllerFeature.h  PhysicsFeature.h  SoldierMovementFeature.h
Tempest/World/Systems/: BoidsSystem.cpp  BoidsSystem.h  InputControllerSystem.h  MoveSystem.h  PhysicsSystem.h
Tempest/World/TaskGraph/: TaskGraph.cpp  TaskGraph.h  Tasks.h
Thunder/: Cargo.toml
Thunder/Components/: Cargo.toml  build.rs  wrapper.hpp
Thunder/Components/src/: lib.rs
Thunder/DataDefinitionGenerated/: Cargo.toml
Thunder/DataDefinitionGenerated/src/: AudioDatabase_generated.rs  CommonTypes_generated.rs  GeometryDatabase_generated.rs  Level_generated.rs  ShaderLibrary_generated.rs  TextureDatabase_generated.rs  lib.rs
Thunder/ShaderCompiler/: Cargo.toml
Thunder/ShaderCompiler/src/: main.rs
Thunder/code_generator/: Cargo.toml
Thunder/code_generator/src/: cppgenerator.rs  main.rs  parser.rs  structures.rs  validator.rs
Thunder/flatbuffer-derive/: Cargo.toml
Thunder/flatbuffer-derive/src/: lib.rs
Thunder/flecs-rs/: Cargo.toml  build.rs
Thunder/flecs-rs-derive/: Cargo.toml
Thunder/flecs-rs-derive/src/: lib.rs
Thunder/flecs-rs/src/: lib.rs  main.rs
Thunder/geometry_database_explorer/: Cargo.toml  build.rs
Thunder/geometry_database_explorer/src/: main.rs
Thunder/gltf-loader/: Cargo.toml
Thunder/gltf-loader/src/: lib.rs  main.rs
Thunder/job-fibers/: Cargo.toml
Thunder/job-fibers/src/: lib.rs
Thunder/math/: Cargo.toml
Thunder/math/src/: lib.rs
Thunder/physics-handler/: Cargo.toml
Thunder/physics-handler/src/: lib.rs
Thunder/shaders/mesh_shader/: Cargo.toml
Thunder/shaders/mesh_shader/src/: lib.rs
Thunder/src/: compiler.rs  main.rs  resources.rs  scene.rs
Thunder/src/resources/: audio_database.rs  entities_world.rs  geometry_database.rs  level.rs  material_database.rs  mesh.rs  physics_world.rs  texture.rs  texture_database.rs
sharpmake/: common.sharpmake.cs  maelstrom.sharpmake.cs  main.sharpmake.cs  spark.sharpmake.cs  tempest.sharpmake.cs  thirdparty.sharpmake.cs
