[workspace]
members = [
    "Thunder",
    "Thunder/ShaderCompiler",
    "Thunder/DataDefinitionGenerated",
    "Thunder/Components",
    "Thunder/flecs-rs",
    "Thunder/flecs-rs-derive",
    "Thunder/flatbuffer-derive",
    "Thunder/physics-handler",
    "Thunder/math",
]

[patch.crates-io]
gltf = {path = "ThirdParty/gltf" }