[workspace]
members = [
    "Thunder",
    "Thunder/ShaderCompiler",
    "Thunder/DataDefinitionGenerated",
    "Thunder/Components",
    "Thunder/flecs-rs",
    "Thunder/flecs-rs-derive",
    "Thunder/flatbuffer-derive",
    "Thunder/physics-handler",
    "Thunder/math",
    "Thunder/geometry_database_explorer",
]

[patch.crates-io]
gltf = {path = "ThirdParty/gltf" }