[workspace]
members = [
    "Thunder",
    "Thunder/ShaderCompiler",
    "Thunder/DataDefinitionGenerated",
    "Thunder/Components",
    "Thunder/flecs-rs",
    "Thunder/flecs-rs-derive",
    "Thunder/flatbuffer-derive",
    "Thunder/physics-handler",
    "Thunder/math",
    "Thunder/geometry_database_explorer",

    "Thunder/shaders/mesh_shader",
]

[patch.crates-io]
gltf = {path = "ThirdParty/gltf" }
meshopt = {path = "ThirdParty/meshopt-rs" }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.5" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.5" }
spirv-std-macros = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.5" }