[package]
name = "thunder"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs-rs = { path="flecs-rs" }
components = { path="Components" }
data_definition_generated = {path = "DataDefinitionGenerated" }

structopt = "0.3"
flatbuffers = "0.6.1"