[package]
name = "thunder"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs-rs = { path="flecs-rs" }
components = { path="Components" }
data_definition_generated = {path = "DataDefinitionGenerated" }
math = { path="math" }

structopt = "0.3"
optick = "1.3.4"
optick-attr = "0.3.0"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
gltf = { version = "0.15", features = ["TEMPEST_extension"] }
