[package]
name = "data_definition_generated"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.6.1"
flatbuffer-derive = { path = "../flatbuffer-derive" }