[package]
name = "shader_compiler"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hassle-rs = "0.4.0"
structopt = "0.3"
data_definition_generated = {path = "../DataDefinitionGenerated" }
regex = "1"
