[package]
name = "geometry_database_explorer"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.10.0"
egui_wgpu_backend = "0.5.0"
egui_winit_platform = "0.5.0"
wgpu = "0.7.1"
futures-lite = "1.11"
winit = "0.24.0"
structopt = "0.3"

data_definition_generated = { path = "../DataDefinitionGenerated" }

[build-dependencies]
spirv-builder = { version = "0.4.0-alpha.5", default-features = false }

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
