[package]
name = "geometry_database_explorer"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui_wgpu_backend = "0.24.0"
egui_winit_platform = "0.19.0"
wgpu = "0.16.1"
futures-lite = "1.11"
winit = "0.24.0"
structopt = "0.3"

data_definition_generated = { path = "../DataDefinitionGenerated" }
mesh_shader = { path="../shaders/mesh_shader" }
math = { path="../math" }

[build-dependencies]
spirv-builder = { version = "0.8" }
