[package]
name = "gltf-loader"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "0.15", features = ["TEMPEST_extension"] }
nalgebra-glm = "0.7.0"