[package]
name = "math"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scalar-math is required as otherwise vec3 are simd vectors with alignment of 16, which breaks packing in c++ code
glam = { version = "0.14", default-features = true, features = ["scalar-math"] }
