[package]
name = "mesh_shader"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-std = "0.4.0-alpha.10"
spirv-std-macros = "0.4.0-alpha.10"
glam = { version = "0.14", default-features = false, features = ["libm", "scalar-math", "spirv-std"] }

[lib]
crate-type = ["rlib", "dylib"]